Add support for shortcuts on Windows

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dependencies = [
     "PyYAML",
     "platformdirs",
     "pipenv",
+    "pywin32; platform_system=='Windows'",
 ]
 dynamic = ["version"]
 
